--- a/app/src/main/res/layout/addhome_dialog.xml
+++ b/app/src/main/res/layout/addhome_dialog.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView6"
@@ -52,18 +52,27 @@
         app:layout_constraintStart_toEndOf="@+id/selSubject"
         app:layout_constraintTop_toTopOf="@+id/selSubject" />
 
-
-    <EditText
-        android:id="@+id/work"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout2"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:hint="Home Work"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selSubject"
-        app:layout_constraintVertical_bias="0.05"/>
+        app:layout_constraintVertical_bias="0.05">
+
+        <!-- TODO : change width below -->
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/work"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:hint="Home Work" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/addHome"
@@ -72,9 +81,9 @@
         android:layout_marginVertical="10dp"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/work"
-        app:layout_constraintStart_toStartOf="@+id/work"
-        app:layout_constraintTop_toBottomOf="@+id/work"
+        app:layout_constraintEnd_toEndOf="@+id/layout2"
+        app:layout_constraintStart_toStartOf="@+id/layout2"
+        app:layout_constraintTop_toBottomOf="@+id/layout2"
         app:layout_constraintVertical_bias="0.08" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
