--- a/app/src/main/res/layout/fragment_homework.xml
+++ b/app/src/main/res/layout/fragment_homework.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.homework.HomeWorkFragment">
 
-
     <Spinner
         android:id="@+id/classFil"
-        android:layout_width="110dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:dropDownHeight="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
